# prompt-scanner

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  cli_usage.md  custom_guardrails.md  decorators.md  getting_started.md  index.md
examples/: basic_usage.py  content_scan_example.py  custom_guardrails_and_categories.py  decorator_example.py  installed_cli_examples.sh  run_without_installation.sh
prompt_scanner/: __init__.py  cli.py  decorators.py  models.py  scanner.py
prompt_scanner/data/: content_policies.yaml  guardrails.yaml  injection_patterns.yaml
tests/: test_cli.py  test_custom_guardrails.py  test_decorators.py  test_models.py  test_prompt_scanning.py  test_scanner.py  test_scanner_functionality.py  test_scanner_initialization.py
