[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-scanner"
version = "0.2.0"
description = "A tool to scan prompts for potentially unsafe content using LLM-based guardrails"
readme = "README.md"
authors = [
    {name = "Shivam Aggarwal", email = "shivama205@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.15.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["prompt_scanner", "prompt_scanner.*"]

[project.urls]
"Homepage" = "https://github.com/shivama205/prompt-scanner"
"Bug Tracker" = "https://github.com/shivama205/prompt-scanner/issues" 